# Project_Shop_cpp

./: CMakeLists.txt  main.cpp
Customer/: Customer.cpp  Customer.h
Manager/: Manager.cpp  Manager.h
Person/: Person.cpp  Person.h
Product/: Product.cpp  Product.h
Seller/: Seller.cpp  Seller.h
Store/: Store.cpp  Store.h
